--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
 .h2size {
     font-size: 16px;
 }
+nav {
+    position: relative;
+    font-size:20px;
+}
+li {
+    display: inline;
+}
+li a {
+  color: #000000;
+  text-decoration: none;
+}
