--- a/main.css
+++ b/main.css
@@ -1,12 +1,14 @@
 .h2size {
     font-size: 16px;
 }
+.footer {
+    font-size: 12px;
+}
 nav {
-    position: relative;
     font-size:20px;
 }
 li {
-    display: inline;
+    display: block;
 }
 li a {
   color: #000000;
